装饰者模式

--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -3,5 +3,23 @@
 # 策略模式
     策略模式是一种定义一系列算法的方法，完成相同的工作，实现不同，以相同的方式调用所有的算法，减少各种算法类与使用算法类之间的耦合[DPE]
 
-# 单一职责原则
-  
+# 单一职责原则（SRP）
+    就一个类而言，应该仅有一个引起它变化的原因[ASD]
+    如果一个类承担的职责过多，就等于把这些职责耦合在一起，当一个职责的变卦可能会削弱或者抑制这个类完成其他职责的能力
+    
+# 开放封闭原则
+    软件实体（类，模块，函数等等）可以拓展，但是不可以修改。
+    开放-封闭原则是面向对象设计的核心。
+
+# 依赖倒转原则
+    面向对象：可维护，可扩展，可复用，灵活性好
+    依赖倒转，又叫依赖倒置：抽象不应该依赖细节，细节应该依赖于抽象，即针对接口编程。
+
+    原则：
+    A. 高层模块不应该依赖低层模块，两个都应该依赖抽象
+    B. 抽象不应该依赖细节，细节应该依赖抽象
+
+# 装饰模式（Decorator）
+    动态的给一个对象添加一些额外的职责，就增加功能来说，装饰者比生成子类更加灵活
+
+![装饰者模式](img/装饰者模式.png)
