--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -23,3 +23,30 @@
     动态的给一个对象添加一些额外的职责，就增加功能来说，装饰者比生成子类更加灵活
 
 ![装饰者模式](img/装饰者模式.png)
+
+# 代理模式(Proxy)
+    为其他对象提供一只代理以控制对这个对象的访问
+ ![代理模式](img/代理模式.png)
+## 应用
+    1. 远程代理
+        为一个对象在不同的地址空间提供局部代表，这样可以隐藏一个对象存在于不同地址空间的事实
+        如：webservice 利用WebReferce代理进行远程访问的问题
+    2. 虚拟代理
+        根据需求需要创建开销很大的对象，通过它来存放实例化需要很长时间的真实对象
+        如：Html文字和图片
+    3. 安全代理
+        控制真实对象的访问权限
+    4. 智能指引
+        调用真实的对象时，代理处理另外一些事
+# 工厂模式
+
+    简单工厂的最大优点在于工厂类中间包含了必要的逻辑判断，根据客户端的选择条件动态实例化相关的类，对于客户端来说，去除了与具体产品的依赖。
+    但是修改是需要加case,修改原来的类，违背开放-封闭原则
+
+  **工厂模式**
+  
+    定义一个创建对象的接口，让子类决定实例化哪一个类，工厂方法使一个类的实例化延迟到其子类
+
+![工厂模式](img/工厂.png)
+
+    
