--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -30,7 +30,7 @@
 ## 应用
     1. 远程代理
         为一个对象在不同的地址空间提供局部代表，这样可以隐藏一个对象存在于不同地址空间的事实
-        如：webservice 利用WebReferce代理进行远程访问的问题
+        如：WebService 利用WebReference代理进行远程访问的问题
     2. 虚拟代理
         根据需求需要创建开销很大的对象，通过它来存放实例化需要很长时间的真实对象
         如：Html文字和图片
