--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -52,3 +52,7 @@
 # 原型模式
     用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象
     原型模式其实就是从一个对象再创建另外一个可定制的对象，而且不需要知道任何创建的细节
+
+# 模板模式
+    定义一个操作中的算法骨架，而将一些步骤延迟到子类中，模板方法使得子类可以不改变一个算法的结构即可重定义该算法的某些特殊步骤
+    通过吧不变的行为搬移到超类，去除子类中的重复代码来体现它的优势
