--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -56,3 +56,16 @@
 # 模板模式
     定义一个操作中的算法骨架，而将一些步骤延迟到子类中，模板方法使得子类可以不改变一个算法的结构即可重定义该算法的某些特殊步骤
     通过吧不变的行为搬移到超类，去除子类中的重复代码来体现它的优势
+
+# 迪米特法则
+    也称最少知识原则
+    如果两个类不必彼此直接通信，那么这两个类就不应当发生直接的相互的作用。如果其中一个类需要调用另一个类的某一个方法的话，可以通过第三者转发调用
+
+# 外观模式
+    为子系统中的一组接口提供一个一致的界面，此模式定义了一个高层的接口，这个接口使得这一子系统更加容易使用
+## 如何使用
+    1. 设计初期，应该要有意识的将不同的两个层分离，层与层之间建立外观
+    2. 开发阶段，子系统往往因为不断的重构演化而变得越来越复杂，增加外观可以提供一个简单的接口减少它们之间的的依赖
+    3. 维护大型系统，提供设计粗糙或者高度复杂的遗留代码的比较清晰简单的接口
+
+# 建造者模式
