--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -70,3 +70,18 @@
 
 # 建造者模式
     将一个复杂对象的构建与它的表示分离，是都同样的构建过程可以创建不同的表示
+
+# 观察者模式
+    定义了一种一对多的依赖关系，让多个观察者对象同时监听一个主题的对象，这个主题对象再状态发生变化时，会通知所有观察者对象，使它们能够自己更新自己
+## 特点
+    当一个对象的改变需要同时改变其他对象，而且不知道具体有多少对象有待改变的时，使用此模式
+    观察者模式所做的工作其实就是在解除耦合，让耦合的双方都依赖于抽象，而不是依赖于具体，从而使各自的变化都不会影响另一边的变化
+**事件委托**可以很好的完善观察者模式中，观察者和同志者解耦的问题
+
+
+
+
+
+
+
+
