--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -78,8 +78,9 @@
     观察者模式所做的工作其实就是在解除耦合，让耦合的双方都依赖于抽象，而不是依赖于具体，从而使各自的变化都不会影响另一边的变化
 **事件委托**可以很好的完善观察者模式中，观察者和同志者解耦的问题
 
-
-
+# 抽象工厂模式
+    提供一个创建一系列相关或者相互依赖的对象接口，而无需指定它们具体的类
+## 反射+ 配置文件访问数据库
 
 
 
