--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -82,6 +82,9 @@
     提供一个创建一系列相关或者相互依赖的对象接口，而无需指定它们具体的类
 ## 反射+ 配置文件访问数据库
 
+# 状态模式
+    当一个对象的内在状态改变时，允许改变其行为，这个对象看起来像是改变了其类
+    主要解决的是当控制一个对象状态转换的条件表达式过于复杂的情况，把状态的判断逻辑转移到表示不同状态的一系列类当中，可以把复杂的逻辑简单化
 
 
 
