适配器模式

--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -86,6 +86,10 @@
     当一个对象的内在状态改变时，允许改变其行为，这个对象看起来像是改变了其类
     主要解决的是当控制一个对象状态转换的条件表达式过于复杂的情况，把状态的判断逻辑转移到表示不同状态的一系列类当中，可以把复杂的逻辑简单化
 
+# 适配器模式
+    将一个类的接口转换为客户希望的另外一个接口，Adapter模式使得原来由于接口不兼容而不能一起工作的那些类可以一起工作
+    两个类所做的事情相同或者相似，但是具有不同的接口时。
+
 
 
 
