--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -90,6 +90,8 @@
     将一个类的接口转换为客户希望的另外一个接口，Adapter模式使得原来由于接口不兼容而不能一起工作的那些类可以一起工作
     两个类所做的事情相同或者相似，但是具有不同的接口时。
 
-
+# 备忘录模式
+    在不破坏封装的前提下，捕获一个对象的内部状态，并在该对象之外保存这个状态，这样之后就可将这个对象恢复到原先保存的状态
+    适用于功能比较复杂的，但需要维护或者记录属性历史的类，或者需要保存的属性只是众多属性中的一部分
 
 
