--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -94,4 +94,7 @@
     在不破坏封装的前提下，捕获一个对象的内部状态，并在该对象之外保存这个状态，这样之后就可将这个对象恢复到原先保存的状态
     适用于功能比较复杂的，但需要维护或者记录属性历史的类，或者需要保存的属性只是众多属性中的一部分
 
+# 组合模式
+    将对象组合成树形结构以表示‘部分-整体’的层次结构，组合模式使得用户对单个对象和组合对象的使用具有一致性
+    当需求中是体现部分与整体层次的结构时，以及你希望用户可以忽略组合对象与单个对象的不同，统一的使用组合结构中的所有对象
 
