--- a/NetCore/设计模式.md
+++ b/NetCore/设计模式.md
@@ -98,3 +98,5 @@
     将对象组合成树形结构以表示‘部分-整体’的层次结构，组合模式使得用户对单个对象和组合对象的使用具有一致性
     当需求中是体现部分与整体层次的结构时，以及你希望用户可以忽略组合对象与单个对象的不同，统一的使用组合结构中的所有对象
 
+# 迭代器模式
+    提供一种方法顺序访问一个聚合对象中的各个元素，二又不暴露该对象的内部表示
