--- a/NetCore/笔记/设计模式-2.md
+++ b/NetCore/笔记/设计模式-2.md
@@ -63,7 +63,7 @@
    
 原则是尽量使用合成、聚合的方式，而不是使用继承。
 
-![设计模式](img/设计模式-1.jpg)
-![设计模式](img/设计模式-2.jpg)
-![设计模式](img/设计模式-3.jpg)
-![设计模式](img/设计模式-4.jpg)
+![设计模式](../img/设计模式-1.jpg)
+![设计模式](../img/设计模式-2.jpg)
+![设计模式](../img/设计模式-3.jpg)
+![设计模式](../img/设计模式-4.jpg)
