--- a/NetCore/笔记/设计模式.md
+++ b/NetCore/笔记/设计模式.md
@@ -22,11 +22,11 @@
 # 装饰模式（Decorator）
     动态的给一个对象添加一些额外的职责，就增加功能来说，装饰者比生成子类更加灵活
 
-![装饰者模式](img/装饰者模式.png)
+![装饰者模式](../img/装饰者模式.png)
 
 # 代理模式(Proxy)
     为其他对象提供一只代理以控制对这个对象的访问
- ![代理模式](img/代理模式.png)
+ ![代理模式](../img/代理模式.png)
 ## 应用
     1. 远程代理
         为一个对象在不同的地址空间提供局部代表，这样可以隐藏一个对象存在于不同地址空间的事实
@@ -47,7 +47,7 @@
   
     定义一个创建对象的接口，让子类决定实例化哪一个类，工厂方法使一个类的实例化延迟到其子类
 
-![工厂模式](img/工厂.png)
+![工厂模式](../img/工厂.png)
 
 # 原型模式
     用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象
@@ -100,3 +100,9 @@
 
 # 迭代器模式
     提供一种方法顺序访问一个聚合对象中的各个元素，二又不暴露该对象的内部表示
+
+# 单例模式
+    保证一个类仅有一个实例，并提供一个访问它的全局访问点
+## 多线程单例
+    lock是确保当一个线程位于代码的临界区，另一个线程不进入临界区，如果其他线程试图进入锁定的代码，则它将一直等待（即被阻止），直到该对象被释放
+    
