--- a/NetCore/笔记/设计模式.md
+++ b/NetCore/笔记/设计模式.md
@@ -105,4 +105,12 @@
     保证一个类仅有一个实例，并提供一个访问它的全局访问点
 ## 多线程单例
     lock是确保当一个线程位于代码的临界区，另一个线程不进入临界区，如果其他线程试图进入锁定的代码，则它将一直等待（即被阻止），直到该对象被释放
-    
+
+# 桥接模式
+## 合成/聚合复用原则
+    尽量使用合成/聚合，尽量不要使用类继承
+    合成（Composition）和聚合（Aggregation）都是关联的特殊类。
+    聚合表示一种弱的‘拥有’关系，体现的是A对象可以包含B对象，但B对象不是A对象的一部分；
+    合成是一种强的‘拥有’关系，体现了严格的部分和整体的关系，部分和整体的生命周期一样
+## 桥接模式
+    将抽象部分与它的实现部分分离，使它们都可以独立的变化
