--- a/NetCore/笔记/设计模式.md
+++ b/NetCore/笔记/设计模式.md
@@ -114,3 +114,14 @@
     合成是一种强的‘拥有’关系，体现了严格的部分和整体的关系，部分和整体的生命周期一样
 ## 桥接模式
     将抽象部分与它的实现部分分离，使它们都可以独立的变化
+
+# 命令模式
+    将一个请求封账为一个对象，从而使你可以用不同的请求对客户进行参数化。对请求排队或记录请求日志，以支持可撤销的操作
+![](../img/命令模式.PNG)
+## 作用
+    1. 较容易设计一个命令队列
+    2. 在需要的情况下，可以较容易的将命令计入日志
+    3. 允许接收请求的一方决定是否要否定请求
+    4. 可以容易实现对请求的撤销和重做
+    5. 由于加进新的具体命令类不影响其他的类，因此增加新的具体命令类很容易
+    6. 命令模式把请求一个操作的对象与知道怎么执行的一个操作的对象分割开
