--- a/NetCore/笔记/设计模式.md
+++ b/NetCore/笔记/设计模式.md
@@ -125,3 +125,10 @@
     4. 可以容易实现对请求的撤销和重做
     5. 由于加进新的具体命令类不影响其他的类，因此增加新的具体命令类很容易
     6. 命令模式把请求一个操作的对象与知道怎么执行的一个操作的对象分割开
+
+# 职责链模式
+    使多个对象都有机会处理请求，从而避免请求的发送者和接收者之间的耦合关系，将这个对象连成一条链，并沿着这条链传递该请求，直到有一个对象处理它为止
+![](../img/职责链.PNG)
+## 好处
+    沿链传递
+    接收者和发送者都没有对方的明确信息，且链中的对象自己并不知道链的结构，结果是职责链可简化对象的相互连接。仅需保持一个指向其后继者的引用
