--- a/NetCore/笔记/设计模式.md
+++ b/NetCore/笔记/设计模式.md
@@ -132,3 +132,6 @@
 ## 好处
     沿链传递
     接收者和发送者都没有对方的明确信息，且链中的对象自己并不知道链的结构，结果是职责链可简化对象的相互连接。仅需保持一个指向其后继者的引用
+
+# 中介者模式（Mediator）
+    用一个中介对象来封装一系列的对象交互，中介者使各对象不需要显式地相互引用，从而使耦合松散，从而可以独立地改变它们之间的交互
