--- a/NetCore/笔记/设计模式.md
+++ b/NetCore/笔记/设计模式.md
@@ -135,3 +135,9 @@
 
 # 中介者模式（Mediator）
     用一个中介对象来封装一系列的对象交互，中介者使各对象不需要显式地相互引用，从而使耦合松散，从而可以独立地改变它们之间的交互
+    一般应用于一组对象以定义良好但是复杂的方式进行通信的场合，以及想定制一个分布在多个类中的行为，而又不想生成太多的子类的场合
+
+# 享元模式
+    运用共享技术有效的支持大量细粒度的对象
+    可以避免大量非常相似类的开销。
+    
