--- a/NetCore/笔记/设计模式.md
+++ b/NetCore/笔记/设计模式.md
@@ -140,4 +140,10 @@
 # 享元模式
     运用共享技术有效的支持大量细粒度的对象
     可以避免大量非常相似类的开销。
-    
+
+# 解释器模式
+    给定一个语言,定义他的文法的一种表示，
+    如果一种特定类型的问题发生的频率足够高，那么可能就值得将该问题的各个实例表述为一个简单语言中的句子。这样就可以构建一个解释器，该解释器通过解释这些句子来解决该问题
+
+# 访问者模式
+    表示一个作用于某对象结构中的各元素的操作，它使你可以在不改变元素类的前提下，定义作用于这些元素的新操作
